--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "ember-cli-babel": "^6.6.0"
   },
   "devDependencies": {
+    "azure-storage": "^2.10.2",
     "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~3.3.0",
     "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-deploy-build": "^1.1.1",
     "ember-cli-eslint": "^4.2.1",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
