--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^6.6.0"
+    "ember-cli-babel": "^6.6.0",
+    "walk": "^2.3.14"
   },
   "devDependencies": {
     "azure-storage": "^2.10.2",
