--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ember-deploy-azure-blob",
+  "name": "ember-cli-deploy-azure-blob",
   "version": "0.0.0",
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
