--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli-deploy-azure-blob",
-  "version": "0.0.0",
+  "version": "0.4.0",
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
     "ember-addon",
@@ -23,6 +23,7 @@
   "dependencies": {
     "ember-cli-babel": "^6.6.0",
     "walk": "^2.3.14",
+    "mime": "^1.2.11",
     "ember-cli-deploy-plugin": "^0.2.9"
   },
   "devDependencies": {
